--- a/p180/res/layout-land/new_layout.xml
+++ b/p180/res/layout-land/new_layout.xml
@@ -17,7 +17,7 @@
         android:orientation="horizontal" >
 
         <Button
-            android:id="@+id/button1"
+            android:id="@+id/btnStop"
             android:layout_width="wrap_content"
             android:layout_height="100dp"
             android:text="Button" />
