--- a/p180/res/layout/activity_main.xml
+++ b/p180/res/layout/activity_main.xml
@@ -33,14 +33,6 @@
         android:textSize="24sp">
     </TextView>
     <TextView
-        android:id="@+id/tvTitleNet"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="@string/provider_network"
-        android:textSize="30sp">
-    </TextView>
-    <TextView
         android:id="@+id/tvEnabledNet"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -52,7 +44,7 @@
         android:layout_height="wrap_content" >
 
         <Button
-            android:id="@+id/btnLocationSettings"
+            android:id="@+id/btnStart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="left"
@@ -63,7 +55,7 @@
             android:text="@string/location_settings" />
 
         <Button
-            android:id="@+id/button1"
+            android:id="@+id/btnStop"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
