--- a/p180/res/menu/main.xml
+++ b/p180/res/menu/main.xml
@@ -7,6 +7,15 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/action_settings"/>
-    <item android:id="@+id/item1" android:orderInCategory="1" android:title="история"></item>
+    <item
+         android:id="@+id/item1"
+         android:title="@string/strHistory">
+        
+    </item>
+    <item 
+        android:id="@+id/itemStat"
+        android:title="@string/strStat">
+        
+    </item>
 
 </menu>
