--- a/p180/res/layout/activity_history.xml
+++ b/p180/res/layout/activity_history.xml
@@ -15,6 +15,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_weight="2"
+            android:gravity="center"
             android:text="@string/dateView"
             android:textAlignment="center"
             android:textSize="20sp" />
@@ -24,7 +25,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
-            android:layout_weight="0.46"
+            android:layout_weight="0.4"
             android:text="@string/distanceView"
             android:textSize="20sp" />
 
@@ -32,8 +33,9 @@
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1.2"
+            android:layout_weight="1"
             android:text="@string/timeView"
+            android:textAlignment="center"
             android:textSize="20sp" />
 
     </LinearLayout>
